--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -49,7 +49,10 @@
 	<img src="/pictures/agromacaj.png" alt="Agromacaj mapa" style="width: 100%">
 	<div class="map-info">
 		<h4>Agromačaj s. r. o</h4>
-		<p>Adresa: Kráľová pri Senci 455, 90050, Hlavná 455, 900 50 Kráľová pri Senci Telefón: 02/456 502 13</p>
+		<p>Adresa: Kráľová pri Senci 455,
+			Hlavná 455, 
+			900 50 Kráľová pri Senci 
+			Telefón: 02/456 502 13</p>
 		<a href="https://goo.gl/maps/rXN29hkemY9k512fA" target="_blank">Google mapa</a>
 	</div>
 </div>
